--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>    
 </section>
 
-<section id="games" class="product-categories">
+<section id="games" class="product-categories" data-aos="fade-up" data-aos-duration="1500">
         <h2>Paling Populer</h2>
         <div class="category" data-aos="fade-up" data-aos-duration="1500">
             <a href="file/ML/ML.html">
@@ -78,7 +78,7 @@
     </section>
 
 
-<section id="allgame" class="product-list">
+<section id="allgame" class="product-list" data-aos="fade-up" data-aos-duration="1500">
     <h2>Semua Game</h2>
     <div class="product-grid" >
         <div class="product-item" data-aos="fade-up" data-aos-duration="1500">
