--- a/file/FF/ff.html
+++ b/file/FF/ff.html
@@ -55,7 +55,7 @@
             <h3>1. Masukkan User ID</h3>
             <div class="input-group">
                 <label for="userId">User ID</label>
-                <input type="text" id="userId" placeholder="Masukkan User ID" />
+                <input type="number" id="userId" placeholder="Masukkan User ID" />
             </div>
         </section>
 
