--- a/file/ML/ML.html
+++ b/file/ML/ML.html
@@ -55,8 +55,8 @@
             <h3>1. Masukkan User ID</h3>
             <div class="input-group">
                 <label for="userId">User ID</label>
-                <input type="text" id="userId" placeholder="Masukkan User ID" />
-                <input type="text" id="zoneId" placeholder="Zone ID" />
+                <input type="number" id="userId" placeholder="Masukkan User ID" />
+                <input type="number" id="zoneId" placeholder="Zone ID" />
             </div>
         </section>
         
