--- a/file/HOK/hok.html
+++ b/file/HOK/hok.html
@@ -55,7 +55,7 @@
             <h3>1. Masukkan email</h3>
             <div class="input-group">
                 <label for="userId">Email</label>
-                <input type="text" id="userId" placeholder="Masukkan email" />
+                <input type="number" id="userId" placeholder="Masukkan email" />
             </div>
         </section>
 
